--- a/src/components/body.module.css
+++ b/src/components/body.module.css
@@ -46,6 +46,7 @@
     transform: translate(50%,-50%);
     box-shadow: 0 0 100px 0px rgba(0, 0, 0, .7);
     background: linear-gradient(to bottom, #00c566, #009e00);
+    z-index: 10000;
   }
   .bgnGroupItem {
     border: none;
@@ -88,11 +89,11 @@
   }
 
   .halo {
-    box-shadow: 0 0 100px 40px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 0 100px 100px rgba(0, 255, 0, 1);
     transition: all 1s;
   }
-  .halo:hover {
-    box-shadow: 0 0 100px 100px rgba(0, 0, 0, 0.25);
+  .haloActive {
+    box-shadow: 0 0 100px 1000px rgba(0, 255, 0, 1);
   }
 
 
